--- a/Srarting Pack 2/Index.html
+++ b/Srarting Pack 2/Index.html
@@ -9,7 +9,7 @@
 		<script src="js/sketch.min.js"></script>
 </head>
 <body>
-	<iframe src="css/Billie Eilish – when the partys over.mp3" allow="autoplay" style="display:none;" frameborder="0"></iframe>
+<!-- 	<iframe src="css/Billie Eilish – when the partys over.mp3" allow="autoplay" style="display:none;" frameborder="0"></iframe> -->
 	<div class="first__viewport">
 		<a 	href="#about">
 		click if you ready
