--- a/fx_release/index.html
+++ b/fx_release/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../FX3/css/style.css">
+    <link rel="stylesheet" href="../fx_release/css/style.css">
     
     <script src="https://api-maps.yandex.ru/2.1/?apikey=<030d826d-a768-4cff-be5a-aeb4af3f432b>&lang=ru_RU" type="text/javascript"></script>
     <script src="../FX3/js/index.js"></script>
