--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -237,7 +237,7 @@
             <h2>Как с нами связаться?</h2>
             <div>
                 <div class="footer__contact">
-                    <img src="../FX3/img/icons/logo.svg" alt="">
+                    <img src="../fix_pls_god/img/icons/logo.svg" alt="">
                     <div class="footer__contact--text">
                         <span>ПН-ПТ 10:00 — 19:00<br>СБ-ВС  12:00 — 18:00</span>
                         <span>г. Минск, пр-т Партизанский, 56, подземный переход</span>
