--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -56,13 +56,13 @@
         <section class="intro">
             <div class="intro__wrapper">
                 <div class="intro__text">
-                    <div class="intro__slides">
+                    <!-- <div class="intro__slides">
                         <button></button>
                         <button></button>
                         <button></button>
                         <button></button>
                         <button></button>
-                    </div>
+                    </div> -->
                     <h1>Ремонт мобильных телефонов <br> в Минске</h1>
                     <span>Иногда ваши устройства нуждаются в помощи <br> и в этот момент мы будем на страже</span>
                     <button class="intro__main--button">Заказать звонок</button>
