--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -41,7 +41,7 @@
     </svg>
 <!-- HEADER -->
     <header>
-        <nav>
+        <nav class="nav">
             <!-- <div class="burger-menu">
                 <a href="#" class="burger-menu__button">
                     <span class="burger-menu__lines"></span>
@@ -111,7 +111,7 @@
 <!-- MAIN -->
     <section class="main" id="about__anchor">
         <div class="main__wrapper">
-            <h2>Почему выбирают именно нас?</h2>
+            <!-- <h2>Почему выбирают именно нас?</h2>
             <div class="main__block--wrapper">
                 <div>
                     <div>
@@ -142,7 +142,7 @@
                                 <span>+%</span>
                                 <span>Ремонт в рассрочку</span>
                             </div>
-                        </div>
+                        </div> -->
             </div><!-- end main__block--wrapper -->
         </div><!-- end main__wrapper -->
     </section>
@@ -254,7 +254,7 @@
     <footer class="footer" id="footer__anchor">
         <div class="footer__wrapper">
             <h2>Как с нами связаться?</h2>
-            <div>
+            <div class="footer_wrapper--contacts">
                 <div class="footer__contact">
                     <img src="../fix_pls_god/img/icons/logo.svg" alt="">
                     <div class="footer__contact--text">
