--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -41,37 +41,21 @@
     </svg>
 <!-- HEADER -->
     <header>
-        <nav class="nav">
-            <!-- <div class="burger-menu">
-                <a href="#" class="burger-menu__button">
-                    <span class="burger-menu__lines"></span>
-                </a>
-                <nav class="burger-menu__nav">
-                    <a href="#" class="burger-menu__link">Главная</a>
-                    <a href="#about__anchor" class="burger-menu__link">О нас</a>
-                    <a href="#price__anchor" class="burger-menu__link">Цены</a>
-                    <a href="#service__anchor" class="burger-menu__link">Схема работы</a>
-                    <a href="#reviews__anchor" class="burger-menu__link">Отзывы</a>
-                    <a href="#footer__anchor" class="burger-menu__link">Контакты</a>
-                </nav>
-
-                <div class="burger-menu__overlay">
-                    
-                </div>
-            </div> -->
-            <div class="nav__container">
-                <a href="#"><img src="../fix_pls_god/img/icons/logo.svg"></a>   
-                <ul>
-                    <li><a href="#">Главная</a></li>
-                    <li><a href="#about__anchor">О нас</a></li>
-                    <li><a href="#price__anchor">Цены</a></li>
-                    <li><a href="#service__anchor">Схема работы</a></li>
-                    <li><a href="#reviews__anchor">Отзывы</a></li>
-                    <li><a href="#footer__anchor">Контакты</a></li>
-                </ul> 
-                <a class="links" href="tel:+375 (29) 166 52 00">+375(29)166 52 00</a>     
-            </div>
+        <div class="nav__wrapper">
+        <nav class="nav__container">
+            <a href="#"><img src="../fix_pls_god/img/icons/logo.svg"></a> 
+            <ul class="topnav" id="myTopnav"> 
+                <li><a href="#" class="active">Главная</a></li>
+                <li><a href="#about__anchor">О нас</a></li>
+                <li><a href="#price__anchor">Цены</a></li>
+                <li><a href="#service__anchor">Схема работы</a></li>
+                <li><a href="#reviews__anchor">Отзывы</a></li>
+                <li><a href="#footer__anchor">Контакты</a></li>
+                <a class="links phone--number" href="tel:+375 (29) 166 52 00">+375(29)166 52 00</a> 
+            </ul> 
+            <li class="icon"><a href="javascript:void(0);" onclick="myFunction()">&#8803</a></li>
         </nav>
+        </div>
         <section class="intro">
             <div class="intro__wrapper">
                 <div class="intro__text">
