--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -47,7 +47,7 @@
                 <li><a id="close__nav-footer" onclick="closeMenuItem()" href="#footer__anchor">Контакты</a></li>
                 <a class="links phone--number" href="tel:+375 (29) 166 52 00">+375(29)166 52 00</a> 
             </ul> 
-            <li class="icon"><a href="javascript:void(0);" onclick="myFunction()">1</a></li>
+            <a class="icon" href="javascript:void(0);" onclick="myFunction()">&#8803</a>
         </nav>
         </div>
         <section class="intro">
