--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -35,6 +35,9 @@
     </svg>
 <!-- HEADER -->
     <header>
+        <div class="call">
+            <a href="tel:+375 (29) 166 52 00"></a>
+        </div>
         <div class="nav__wrapper">
         <nav class="nav__container">
             <a href="#"><img src="../fix_pls_god/img/icons/logo.svg"></a> 
