done layaout modals

--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -288,7 +288,7 @@
             <p>Оставьте ваш номер телефона и мы перезвоним вам в ближайшее время</p>
             <input type="text" required placeholder="Ваше имя">
             <input type="tel" required placeholder="+375-..-.......">
-            <button>Заказать звонок</button>
+            <button onclick="openModalThanks()">Заказать звонок</button>
         </div>
     </div>
     <div class="modal__send--wrapper"  id="footer__close--modal">
@@ -300,7 +300,8 @@
         </div>
     </div>
 </body>
-<script src="https://api-maps.yandex.ru/2.1/?apikey=<030d826d-a768-4cff-be5a-aeb4af3f432b>&lang=ru_RU" type="text/javascript"></script>
+<!-- SCRIPTS -->
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=<030d826d-a768-4cff-be5a-aeb4af3f432b>&lang=ru_RU" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="../fix_pls_god/js/index.js"></script>
 </html>
