page rewiews almost ready

--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -34,7 +34,7 @@
         </symbol>
     </svg>
 <!-- HEADER -->
-    <header>
+    <header id="home__anchor">
         <div class="call">
             <a href="tel:+375 (29) 166 52 00"></a>
         </div>
@@ -237,7 +237,7 @@
                 </div>
 
             </div>
-            <a href="#">Читать все отзывы</a>
+            <a href="../fix_pls_god/reviews.html">Читать все отзывы</a>
         </div>
     </section>
 <!-- FOOTER -->
@@ -302,6 +302,5 @@
 </body>
 <!-- SCRIPTS -->
     <script src="https://api-maps.yandex.ru/2.1/?apikey=<030d826d-a768-4cff-be5a-aeb4af3f432b>&lang=ru_RU" type="text/javascript"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="../fix_pls_god/js/index.js"></script>
 </html>
