--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -146,18 +146,18 @@
             <span>Выберите модель вашего телефона</span>
             <div class="price__container">
                 <div>
-                    <a class="price__item" href="#">Apple</a>
-                    <a class="price__item" href="#">Samsung</a>
-                    <a  class="price__item"href="#">Xiaomi</a>
-                    <a class="price__item" href="#">Meizu</a>
-                    <a class="price__item" href="#">Huawei</a>
+                    <a class="price__item" href="../fix_pls_god/price.html">Apple</a>
+                    <a class="price__item" href="../fix_pls_god/price.html">Samsung</a>
+                    <a  class="price__item"href="../fix_pls_god/price.html">Xiaomi</a>
+                    <a class="price__item" href="../fix_pls_god/price.html">Meizu</a>
+                    <a class="price__item" href="../fix_pls_god/price.html">Huawei</a>
                 </div>
                 <div>
-                    <a class="price__item" href="#">LG</a>
-                    <a class="price__item" href="#">ONE PLUS</a>
-                    <a  class="price__item"href="#">Sony</a>
-                    <a class="price__item" href="#">Lenovo</a>
-                    <a class="price__item" href="#">Huita</a>
+                    <a class="price__item" href="../fix_pls_god/price.html">LG</a>
+                    <a class="price__item" href="../fix_pls_god/price.html">ONE PLUS</a>
+                    <a  class="price__item"href="../fix_pls_god/price.html">Sony</a>
+                    <a class="price__item" href="../fix_pls_god/price.html">Lenovo</a>
+                    <a class="price__item" href="../fix_pls_god/price.html">Huita</a>
                 </div>
             </div>
             <div class="price__footer">
