--- a/fix_pls_god/price.html
+++ b/fix_pls_god/price.html
@@ -66,26 +66,382 @@
                 </nav>
             </div>
     </header>
+    <!-- MAIN -->
     <main>
         <section>
             <div class="price__column">
                 <div class="price__left--column" id="left__column">
-                    <a href="">Apple</a>
-                    <a href="">Samsung</a>
-                    <a href="">Sony</a>
-                    <a href="">Nokia</a>
-                    <a href="">Meizu</a>
-                    <a href="">Huawei</a>
-                    <a href="">Xiaomi</a>
-                    <a href="">Lenovo</a>
-                    <a href="">LG</a>
-                    <a href="">Nokia</a>
+                    <a href="../fix_pls_god/price.html" onclick="toogleApple()">Apple</a>
+                    <a href="../fix_pls_god/price.html" onclick="toogleSamsung()">Samsung</a>
+                    <button onclick="toogleSony()">Sony</button>
+                    <a href="../fix_pls_god/price.html">Nokia</a>
+                    <a href="../fix_pls_god/price.html">Meizu</a>
+                    <a href="../fix_pls_god/price.html">Huawei</a>
+                    <a href="../fix_pls_god/price.html">Xiaomi</a>
+                    <a href="../fix_pls_god/price.html">Lenovo</a>
+                    <a href="../fix_pls_god/price.html">LG</a>
+                    <a href="../fix_pls_god/price.html">Nokia</a>
                 </div>
-                <div class="price__right--column">
+<!--  Price Apple -->
+                <div class="price__right--column" id="price__Apple">
                     <span>Цены Apple</span>
                     <div class="price__main--container" >
-            
+                        <div>
+                            <h6>Ремонт любой сложности</h6>
+                            <div>
+                                <span>Замена разъема (не заряжается)</span>
+                                <span>от 25 руб	</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>Замена динамика (я не слышу собеседника)</span>
+                                <span>от 25 руб	</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>Замена полифонического динамика (я не слышу звонок)</span>
+                                <span>от 25 руб	</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>Замена микрофона (меня не слышит собеседник)</span>
+                                <span>от 25 руб	</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>Замена кнопок (вкл +/-)</span>
+                                <span>от 25 руб	</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>Не видит sim</span>
+                                <span>от 25 руб	</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>Программный ремонт</span>
+                                <span>от 25 руб	</span>
+                                <span>от 30 мин</span>
+                            </div>
+                        </div>
+                        <div>
+                            <h6>Замена стекла</h6>
+                            <div>
+                                <span>iPhone 5, 5s</span>
+                                <span>от 160 руб</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>iPhone 6</span>
+                                <span>от 160 руб</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>iPhone 6 PLUS</span>
+                                <span>от 160 руб</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>iPhone 6s</span>
+                                <span>от 160 руб</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>iPhone 5SE</span>
+                                <span>от 160 руб</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>iPhone 7</span>
+                                <span>от 160 руб</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>iPhone 7 PLUS</span>
+                                <span>от 160 руб</span>
+                                <span>от 30 мин</span>
+                            </div>
+                        </div>
+                        <div>
+                            <h6>Замена ЖКИ модуля</h6>
+                            <div>
+                                <span>iPhone 5, 5s</span>
+                                <span>от 85 руб</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>iPhone 6</span>
+                                <span>от 85 руб</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>iPhone 6 PLUS</span>
+                                <span>от 85 руб</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>iPhone 6s</span>
+                                <span>от 85 руб</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>iPhone 5SE</span>
+                                <span>от 85 руб</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>iPhone 7</span>
+                                <span>от 85 руб</span>
+                                <span>от 30 мин</span>
+                            </div>
+                            <div>
+                                <span>iPhone 7 PLUS</span>
+                                <span>от 85 руб</span>
+                                <span>от 30 мин</span>
+                            </div>
+                        </div>
                     </div>
+<!-- price Samsung -->
+                    <div class="price__right--column" id="price__Samsung">
+                            <span>Цены Samsung</span>
+                            <div class="price__main--container" >
+                                <div>
+                                    <h6>Ремонт любой сложности</h6>
+                                    <div>
+                                        <span>Замена разъема (не заряжается)</span>
+                                        <span>от 25 руб	</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>Замена динамика (я не слышу собеседника)</span>
+                                        <span>от 25 руб	</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>Замена полифонического динамика (я не слышу звонок)</span>
+                                        <span>от 25 руб	</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>Замена микрофона (меня не слышит собеседник)</span>
+                                        <span>от 25 руб	</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>Замена кнопок (вкл +/-)</span>
+                                        <span>от 25 руб	</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>Не видит sim</span>
+                                        <span>от 25 руб	</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>Программный ремонт</span>
+                                        <span>от 25 руб	</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                </div>
+                                <div>
+                                    <h6>Замена стекла</h6>
+                                    <div>
+                                        <span>iPhone 5, 5s</span>
+                                        <span>от 160 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 6</span>
+                                        <span>от 160 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 6 PLUS</span>
+                                        <span>от 160 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 6s</span>
+                                        <span>от 160 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 5SE</span>
+                                        <span>от 160 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 7</span>
+                                        <span>от 160 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 7 PLUS</span>
+                                        <span>от 160 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                </div>
+                                <div>
+                                    <h6>Замена ЖКИ модуля</h6>
+                                    <div>
+                                        <span>iPhone 5, 5s</span>
+                                        <span>от 85 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 6</span>
+                                        <span>от 85 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 6 PLUS</span>
+                                        <span>от 85 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 6s</span>
+                                        <span>от 85 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 5SE</span>
+                                        <span>от 85 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 7</span>
+                                        <span>от 85 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 7 PLUS</span>
+                                        <span>от 85 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>  
+<!--  Price Sony -->
+<div class="price__right--column" id="price__Sony">
+        <span>Цены Sony</span>
+        <div class="price__main--container" >
+            <div>
+                <h6>Ремонт любой сложности</h6>
+                <div>
+                    <span>Замена разъема (не заряжается)</span>
+                    <span>от 25 руб	</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>Замена динамика (я не слышу собеседника)</span>
+                    <span>от 25 руб	</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>Замена полифонического динамика (я не слышу звонок)</span>
+                    <span>от 25 руб	</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>Замена микрофона (меня не слышит собеседник)</span>
+                    <span>от 25 руб	</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>Замена кнопок (вкл +/-)</span>
+                    <span>от 25 руб	</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>Не видит sim</span>
+                    <span>от 25 руб	</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>Программный ремонт</span>
+                    <span>от 25 руб	</span>
+                    <span>от 30 мин</span>
+                </div>
+            </div>
+            <div>
+                <h6>Замена стекла</h6>
+                <div>
+                    <span>iPhone 5, 5s</span>
+                    <span>от 160 руб</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>iPhone 6</span>
+                    <span>от 160 руб</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>iPhone 6 PLUS</span>
+                    <span>от 160 руб</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>iPhone 6s</span>
+                    <span>от 160 руб</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>iPhone 5SE</span>
+                    <span>от 160 руб</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>iPhone 7</span>
+                    <span>от 160 руб</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>iPhone 7 PLUS</span>
+                    <span>от 160 руб</span>
+                    <span>от 30 мин</span>
+                </div>
+            </div>
+            <div>
+                <h6>Замена ЖКИ модуля</h6>
+                <div>
+                    <span>iPhone 5, 5s</span>
+                    <span>от 85 руб</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>iPhone 6</span>
+                    <span>от 85 руб</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>iPhone 6 PLUS</span>
+                    <span>от 85 руб</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>iPhone 6s</span>
+                    <span>от 85 руб</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>iPhone 5SE</span>
+                    <span>от 85 руб</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>iPhone 7</span>
+                    <span>от 85 руб</span>
+                    <span>от 30 мин</span>
+                </div>
+                <div>
+                    <span>iPhone 7 PLUS</span>
+                    <span>от 85 руб</span>
+                    <span>от 30 мин</span>
+                </div>
+            </div>
+        </div>
+</div>
+<!-- Price Nokia -->
                     <div class="price__questions">
                         <span>Остались вопросы?</span><br>
                         <span>Позвоните и наш специалист проконсультирует вас по любому вопросу</span>
