--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -168,7 +168,7 @@
             <div class="price__footer">
                 <div class="price__about">
                     <span>Не нашли модель своего телефона?</span>
-                    <span>Просто позвоните нам и мы ответим на все интересующие вас вопросы</span>
+                    <span>Просто позвоните нам и мы ответим на все <br> интересующие вас вопросы</span>
                 </div>
                 <div>
                     <button onclick="footerOrderCall()">Заказать звонок</button>
