--- a/fix_pls_god/price.html
+++ b/fix_pls_god/price.html
@@ -202,7 +202,7 @@
                         </div>
                     </div>
 <!-- price Samsung -->
-                    <div class="price__right--column" id="price__Samsung">
+                    <!-- <div class="price__right--column" id="price__Samsung">
                             <span>Цены Samsung</span>
                             <div class="price__main--container" >
                                 <div>
@@ -320,7 +320,7 @@
                                     </div>
                                 </div>
                             </div>
-                    </div>  
+                    </div>   -->
 <!--  Price Sony -->
 <div class="price__right--column" id="price__Sony">
         <span>Цены Sony</span>
