--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -80,7 +80,7 @@
                     <button class="intro__main--button"  onclick="footerOrderCall()">Заказать звонок</button>
                 </div>
                 
-                <div class="intro__social">
+                <div>
                     <a class="social__item" href="https://m.facebook.com/Fiix.by/?ref=bookmarks" target="_blank">
                         <svg>
                             <use xlink:href="#facebook"></use>
@@ -264,17 +264,17 @@
                 </div>
             </div>
             <div>
-                <a class="social__item--footer" href="https://m.facebook.com/Fiix.by/?ref=bookmarks" target="_blank">
+                <a class="social__item" href="https://m.facebook.com/Fiix.by/?ref=bookmarks" target="_blank">
                     <svg>
                         <use xlink:href="#facebook"></use>
                     </svg>
                 </a>
-                <a class="social__item--footer" href="https://instagram.com/fiix.by?igshid=1id05nx64mv35" target="_blank">
+                <a class="social__item" href="https://instagram.com/fiix.by?igshid=1id05nx64mv35" target="_blank">
                     <svg>
                         <use xlink:href="#instagram"></use>
                     </svg>
                 </a>
-                <a class="social__item--footer" href="https://vk.com/club180983591" target="_blank">
+                <a class="social__item" href="https://vk.com/club180983591" target="_blank">
                     <svg>
                         <use xlink:href="#vk"></use>
                     </svg>
