--- a/fix_pls_god/reviews.html
+++ b/fix_pls_god/reviews.html
@@ -134,17 +134,17 @@
                 <button id="sendReview" onclick="rewiewsOrderCall()">Оставить отзыв</button>
             </div>
             <div  class="rewiews__social">
-                    <a class="social__item--footer" href="https://m.facebook.com/Fiix.by/?ref=bookmarks" target="_blank">
+                    <a class="social__item" href="https://m.facebook.com/Fiix.by/?ref=bookmarks" target="_blank">
                         <svg>
                             <use xlink:href="#facebook"></use>
                         </svg>
                     </a>
-                    <a class="social__item--footer" href="https://instagram.com/fiix.by?igshid=1id05nx64mv35" target="_blank">
+                    <a class="social__item" href="https://instagram.com/fiix.by?igshid=1id05nx64mv35" target="_blank">
                         <svg>
                             <use xlink:href="#instagram"></use>
                         </svg>
                     </a>
-                    <a class="social__item--footer" href="https://vk.com/club180983591" target="_blank">
+                    <a class="social__item" href="https://vk.com/club180983591" target="_blank">
                         <svg>
                             <use xlink:href="#vk"></use>
                         </svg>
